fix: вынес цвета в переменные

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,52 +1,25 @@
-/* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
-
   --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
-
-  --vt-c-indigo: #2c3e50;
-
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-}
-
-/* semantic color variables for this project */
-:root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px;
+  --text-white: rgb(255, 255, 255);
+  --black: rgb(0, 0, 0);
+  --black-50: rgba(0, 0, 0, 0.5);
+  --black-80: rgba(0, 0, 0, 0.8);
+  --dark: rgb(26, 26, 26);
+  --darkened: rgba(6, 6, 6, 0.65);
+  --smoky-black: rgb(36, 34, 35);
+  --error: #ff6b6b;
+  --gray: rgb(57, 56, 57);
+  --dark-gray: rgba(65, 60, 53, 0.8);
+  --white-gray: rgb(69, 69, 69);
+  --gray-50: rgba(255, 255, 255, 0.5);
+  --text-gray-47: rgba(255, 255, 255, 0.47);
+  --scroll-white: rgb(217, 217, 217);
+  --border-gray: #555;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
   }
 }
 
@@ -60,7 +33,7 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: var(--text-white);
   background: var(--color-background);
   transition:
     color 0.5s,
